--- a/mozjs-sys/Cargo.toml
+++ b/mozjs-sys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mozjs_sys"
+name = "wasmer_mozjs_sys"
 description = "System crate for the Mozilla SpiderMonkey JavaScript engine."
 repository.workspace = true
 version = "0.68.2"
