--- a/mozjs-sys/makefile.cargo
+++ b/mozjs-sys/makefile.cargo
@@ -143,9 +143,12 @@ endif
 
 .PHONY : all maybe-configure
 
-all: maybe-configure
+all: fetch maybe-configure
 	$(MAKE) -f Makefile
 	'$(BASE_DIR)'/append-object-files.sh
+
+fetch:
+	'$(BASE_DIR)'/fetch-mozjs.sh
 
 # Only touch and run configure if we need to, to avoid unnecessary rebuilds.
 # The second two time checks handle the case of configure.in and configure having
